--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -61,7 +61,7 @@
     <h1>Formato para la solicitud de arriendo de cancha</h1>
     <p><strong>Asunto:</strong> Solicitud de arriendo de cancha de [fútbol/tenis]</p>
     <p><strong>Contenido:</strong></p>
-    <p>Solicito arrendar los siguientes horarios por orden de prioridad:</p>
+    <p>Solicito por orden de prioridad los siguientes horarios para arrendar:</p>
     <ul>
       <li>[Día] [Horario]</li>
       <li>[Día] [Horario]</li>
