--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
         <p>Ejemplo de arriendo exitoso: </p> 
         <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo exitoso" class="img-responsive">
         <p>Ejemplo de arriendo fallido: En este caso debido a que alguien más ya a arrendado la cancha para el horario seleccionado</p> 
-        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo fallido" class="img-responsive">
+        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo fallido por imposibilidad de horario" class="img-responsive">
+        <p>Ejemplo de arriendo fallido: En este caso debido a que el alumno solicito arriendo con formato incorrecto</p> 
+        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Solicitar%20mas%20de%20una%20cancha.png?raw=true" alt="Correo de arriendo fallido por formato" class="img-responsive">
+        <p>Ejemplo de arriendo fallido: En este caso debido a que el alumno ya solicito una cancha durante la semana</p> 
+        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Solicitar%20mas%20de%20una%20cancha.png?raw=true" alt="Correo de arriendo fallido por solicitar nuevamente cancha" class="img-responsive">
         <br />
       </section>
     </article>
