--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Ejemplo de arriendo exitoso: </p> 
         <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Exito.png?raw=true" alt="Correo de arriendo exitoso" class="img-responsive">
         <p>Ejemplo de arriendo fallido: En este caso debido a que alguien más ya a arrendado la cancha para el horario seleccionado</p> 
-        <img src="https://github.com/Matianico07/Matianico07.github.io/blob/main/Imagenes/ImagenPrueba2.png?raw=true" alt="Correo de arriendo fallido por imposibilidad de horario" class="img-responsive">
+        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Horario%20no%20disponible.png?raw=true" alt="Correo de arriendo fallido por imposibilidad de horario" class="img-responsive">
         <p>Ejemplo de arriendo fallido: En este caso debido a que el alumno solicito arriendo con formato incorrecto</p> 
         <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Formato%20Erroneo.png?raw=true" alt="Correo de arriendo fallido por formato" class="img-responsive">
         <p>Ejemplo de arriendo fallido: En este caso debido a que el alumno ya solicito una cancha durante la semana</p> 
