--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
         <h3>Acerca de SmartCanchasUSM</h3>
         <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a arrendar canchas de manera fácil y rápida.</p>
         <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: smartcanchas@gmail.com</p>
+        <p>Proyecto desarrollado por:</p>
+        <p>Diego Villegas</p>
+        <p>Enzo Erazo</p>
+        <p>Sebastian Salgado</p>
+        <p>Iván Oyarzún</p>
+        <p>Matias Correa</p>
       </section>
     </article>
 
