--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#Horarios">Horarios de las canchas</a></li>
-          <li><a href="#Solicitud">Correo para arriendo</a></li>
+          <li><a href="#Solicitud">Correo para agendar</a></li>
           <li><a href="#about">Acerca de nosotros:</a></li>
         </ul>
       </nav>
       
       <article>
         <h2>Bienvenido a SmartCanchasUSM</h2>
-        <p>¡Hola sansan@s! En esta página encontraréis todo lo necesario para arrendar una cancha de tenios o futbol de la universidad.</p>
+        <p>¡Hola sansan@s! En esta página encontraréis todo lo necesario para agendar una cancha de tenios o futbol de la universidad.</p>
         <p>Primero, se les proporcionará un enlace a un excel en la cual estarán disponibles todos los horarios de las canchas de tenis y fútbol. Ustedes podrán elegir el horario disponible que mejor se ajuste a sus necesidades y solicitarlo mediante el envío de un correo electrónico a la dirección smartcanchas@gmail.com</p>
         <p>Es importante seguir el formato establecido (<a href="Planilla/Correo.html">Ver aqui<a>) en el correo electrónico, que debe incluir información como el nombre de la persona que hará la reserva, el día y el bloque de tiempo deseado. Una vez enviado el correo, se recibirá una confirmación de que la reserva se ha realizado con éxito, y el Excel se actualizará para reflejar la reserva.</p>
         <p>Recordar que el horario para enviar correo son los dias Jueves de 9 AM a 4 PM</p>
@@ -33,27 +33,27 @@
     
     <article>
       <section id="Horarios">
-        <h2>Horario del arriendo de canchas</h2>
-        <p>Es importante mencionar que el proceso de arriendo de canchas se inicia todos los jueves a las 9 AM, para la semana siguiente. Es decir, los usuarios podrán hacer sus reservas para la semana siguiente a partir de este horario. Se recomienda a los usuarios que realicen sus reservas lo antes posible, ya que los horarios más solicitados pueden llenarse rápidamente.</p> 
-        <p>En el siguiente enlace estará la hoja de calculo en donde se puede visualizar los horarios del arriendo de las canchas.</p>
+        <h2>Horario disponibles para agendar canchas</h2>
+        <p>Es importante mencionar que el proceso de agendar canchas se inicia todos los jueves a las 9 AM, para la semana siguiente. Es decir, los usuarios podrán hacer sus reservas para la semana siguiente a partir de este horario. Se recomienda a los usuarios que realicen sus reservas lo antes posible, ya que los horarios más solicitados pueden llenarse rápidamente.</p> 
+        <p>En el siguiente enlace estará la hoja de calculo en donde se puede visualizar los horarios disponibles para agendar las canchas.</p>
         <a href="https://docs.google.com/spreadsheets/d/1fD98wl-ptG2dr960RId1YKms4A5WgnxXyDogMf6XXJ8/edit#gid=0">Visualización de los horarios actuales</a>
       </section>
 
       <section id="Solicitud">
-        <h3>Solicitud de arriendo</h3>
+        <h3>Formato para agendar</h3>
         <p>Para solicitar canchas deben mandar correo a smartcanchas@gmail.com con el siguiente formato</p>   
-        <a href="Planilla/Correo.html">Visualizacion de formato del correo de arriendo</a>
+        <a href="Planilla/Correo.html">Visualizacion de formato del correo agendamiento</a>
         <p>A continuación se muestra una imagen de ejemplo de correo</p> 
-        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20del%20Correo%20para%20arriendo.png?raw=true" alt="Ejemplo del correo de arriendo" class="img-responsive">
-        <p>Una vez enviado el correo usted recibira un correo con los detalles del arriendo, o en caso de un error un mensaje de la causa del error. </p>
-        <p>Ejemplo de arriendo exitoso: </p> 
-        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Exito.png?raw=true" alt="Correo de arriendo exitoso" class="img-responsive">
-        <p>Ejemplo de arriendo fallido: En este caso debido a que alguien más ya a arrendado la cancha para el horario seleccionado</p> 
-        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Horario%20no%20disponible.png?raw=true" alt="Correo de arriendo fallido por imposibilidad de horario" class="img-responsive">
-        <p>Ejemplo de arriendo fallido: En este caso debido a que el alumno solicito arriendo con formato incorrecto</p> 
-        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Formato%20Erroneo.png?raw=true" alt="Correo de arriendo fallido por formato" class="img-responsive">
-        <p>Ejemplo de arriendo fallido: En este caso debido a que el alumno ya solicito una cancha durante la semana</p> 
-        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Solicitar%20mas%20de%20una%20cancha.png?raw=true" alt="Correo de arriendo fallido por solicitar nuevamente cancha" class="img-responsive">
+        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20del%20Correo%20para%20arriendo.png?raw=true" alt="Ejemplo del correo para arrendar" class="img-responsive">
+        <p>Una vez enviado el correo usted recibira un correo con los detalles de la solicitud, o en caso de un error un mensaje de la causa del error. </p>
+        <p>Ejemplo de agendamiento exitoso: </p> 
+        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Exito.png?raw=true" alt="Correo para agendar exitoso" class="img-responsive">
+        <p>Ejemplo de solicitud para agendar fallido: En este caso debido a que alguien más ya a arrendado la cancha para el horario seleccionado</p> 
+        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Horario%20no%20disponible.png?raw=true" alt="Correo para agendar fallido por imposibilidad de horario" class="img-responsive">
+        <p>Ejemplo de solicitud para agendar fallido: En este caso debido a que el alumno solicito arriendo con formato incorrecto</p> 
+        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Formato%20Erroneo.png?raw=true" alt="Correo para agendar fallido por formato" class="img-responsive">
+        <p>Ejemplo de solicitud para agendar fallido: En este caso debido a que el alumno ya solicito una cancha durante la semana</p> 
+        <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Solicitar%20mas%20de%20una%20cancha.png?raw=true" alt="Correo para agendar fallido por solicitar nuevamente cancha" class="img-responsive">
         <br />
       </section>
     </article>
@@ -61,7 +61,7 @@
     <article>
       <section id="about">
         <h3>Acerca de SmartCanchasUSM</h3>
-        <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a arrendar canchas de manera fácil y rápida.</p>
+        <p>Este sitio web fue creado para ayudar a los estudiantes y personal de la Universidad Santa María a agendar canchas de manera fácil y rápida.</p>
         <p>Si tienes alguna pregunta o sugerencia para la página, no dudes en ponerte en contacto con nosotros a través del siguiente correo electrónico: smartcanchas@gmail.com</p>
         <p>Proyecto desarrollado por:</p>
         <p>Diego Villegas</p>
