--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="../estilos.css">
-    <title>Solicitud de arriendo de cancha</title>
+    <title>Solicitud para agendar canchas</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>Formato para la solicitud de arriendo de cancha</h1>
+    <h1>Formato para la solicitud para agendar de canchas</h1>
     <p><strong>Asunto:</strong> Solicitud de arriendo de cancha de [fútbol/tenis]</p>
     <p><strong>Contenido:</strong></p>
     <p>Solicito por orden de prioridad los siguientes horarios para arrendar:</p>
@@ -74,8 +74,8 @@
     <h2>Consideraciones para el correo:</h2>
     <p>Para el asunto, el usuario debe reemplazar "[fútbol/tenis]" por el deporte correspondiente para el cual desea arrendar la cancha.</p>
     <p>Para el contenido del correo, el usuario debe reemplazar el [Nombre del día] y [Bloque de Horario] por el día de la semana y el bloque el cual quiere arrendar la cancha.</p>
-    <p>Para el horario, se debe reemplazar escribiendo por ejemplo "Bloque 1-2" que significa arriendo desde las 8:15AM hasta las 9:25AM.</p>
-    <p>Es obligatorio dar el número de teléfono, ya que en caso de que el arriendo sea cancelado, la universidad usa el número para dar aviso.</p>
+    <p>Para el horario, se debe reemplazar escribiendo por ejemplo "Bloque 1-2" que significa que la hora solicitada es desde las 8:15AM hasta las 9:25AM.</p>
+    <p>Es obligatorio dar el número de teléfono, ya que en caso de que se cancele el agendamiento de las canchas sea cancelado, la universidad usa el número para dar aviso.</p>
     <p>Recordar que el horario para enviar correo son los dias Jueves de 9 AM a 4 PM</p>
 
     <p class="footnote">Si desesa ver una conversion de bloque a Hora, haga click aqui.</p>
