--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -87,7 +87,7 @@
     <p><strong>Asunto:</strong>Solicitud agendamiento cancha de tenis</p>
     <p>Solicito por orden de prioridad los siguientes horarios para agendar:</p>
     <ul>
-      <li>Sábado 9-10 </li>
+      <li>Jueves 9-10 </li>
       <li>Martes 15-16 </li>
       <li>Lunes 19-20 </li>
     </ul>
@@ -98,7 +98,7 @@
     <p><strong>Asunto:</strong>Solicitud agendamientoo cancha de fútbol</p>
     <p>Solicito por orden de prioridad los siguientes horarios para agendar:</p>
     <ul>
-      <li>Domingo 13-14 </li>
+      <li>Viernes13-14 </li>
       <li>Miércoles 17-18  </li>
       <li>Jueves 11-12  </li>
     </ul>
@@ -110,7 +110,7 @@
     <p>Solicito por orden de prioridad los siguientes horarios para agendar:</p>
     <ul>
       <li>Viernes 15-16  </li>
-      <li>Sábado 11-12  </li>
+      <li>Martes 11-12  </li>
       <li>Lunes 19-20   </li>
     </ul>
     <p>Saludos cordiales, Carlos López - 2023XXXXX-X +569XXXXXXXX</p>
