--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section id="Solicitud">
         <h3>Formato para agendar</h3>
         <p>Para solicitar canchas deben mandar correo a smartcanchas@gmail.com con el siguiente formato</p>   
-        <a href="Planilla/Correo.html">Visualizacion de formato del correo agendamiento</a>
+        <a href="Planilla/Correo.html">Visualizacion de formato del correo para agendar</a>
         <p>A continuación se muestra una imagen de ejemplo de correo</p> 
         <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20del%20Correo%20para%20agendar.png?raw=true" alt="Ejemplo del correo para agendar" class="img-responsive">
         <p>Una vez enviado el correo usted recibira un correo con los detalles de la solicitud, o en caso de un error un mensaje de la causa del error. </p>
