--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       
       <article>
         <h2>Bienvenido a SmartCanchasUSM</h2>
-        <p>¡Hola sansan@s! En esta página encontraréis todo lo necesario para agendar una cancha de tenios o futbol de la universidad.</p>
+        <p>¡Hola sansan@s! En esta página encontraréis todo lo necesario para agendar una cancha de tenis o futbol de la universidad.</p>
         <p>Primero, se les proporcionará un enlace a un excel en la cual estarán disponibles todos los horarios de las canchas de tenis y fútbol. Ustedes podrán elegir el horario disponible que mejor se ajuste a sus necesidades y solicitarlo mediante el envío de un correo electrónico a la dirección smartcanchas@gmail.com</p>
         <p>Es importante seguir el formato establecido (<a href="Planilla/Correo.html">Ver aqui<a>) en el correo electrónico, que debe incluir información como el nombre de la persona que hará la reserva, el día y el bloque de tiempo deseado. Una vez enviado el correo, se recibirá una confirmación de que la reserva se ha realizado con éxito, y el Excel se actualizará para reflejar la reserva.</p>
         <p>Recordar que el horario para enviar correo son los dias Jueves de 9 AM a 4 PM</p>
