--- a/Planilla/Correo.html
+++ b/Planilla/Correo.html
@@ -87,7 +87,7 @@
     <ul>
       <li>Jueves 9-10 </li>
       <li>Martes 15-16 </li>
-      <li>Lunes 19-20 </li>
+      <li>Almuerzo </li>
     </ul>
     <p>Juan Pérez +569XXXXXXXX</p>
       
@@ -107,7 +107,7 @@
     <ul>
       <li>Viernes 15-16</li>
       <li>Martes 11-12</li>
-      <li>Lunes 19-20</li>
+      <li>Lunes 3-4</li>
     </ul>
     <p>Carlos López +569XXXXXXXX</p>
   </body>
