--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>¡Hola sansan@s! En esta página encontraréis todo lo necesario para agendar una cancha de tenis o futbol de la universidad.</p>
         <p>Primero, se les proporcionará un enlace a un excel en la cual estarán disponibles todos los horarios de las canchas de tenis y fútbol. Ustedes podrán elegir el horario disponible que mejor se ajuste a sus necesidades y solicitarlo mediante el envío de un correo electrónico a la dirección smartcanchas@gmail.com</p>
         <p>Es importante seguir el formato establecido (<a href="Planilla/Correo.html">Ver aqui<a>) en el correo electrónico, que debe incluir información como el nombre de la persona que hará la reserva, el día y el bloque de tiempo deseado. Una vez enviado el correo, se recibirá una confirmación de que la reserva se ha realizado con éxito, y el Excel se actualizará para reflejar la reserva.</p>
-        <p>Recordar que el horario para enviar correo son los dias Jueves de 9 AM a 4 PM</p>
+        <p>Recordar que el horario para enviar correo son los dias Jueves de 9 AM a 4 PM.</p>
       </article>
     </section>
     
@@ -41,20 +41,20 @@
 
       <section id="Solicitud">
         <h3>Formato para agendar</h3>
-        <p>Para solicitar canchas deben mandar correo a smartcanchas@gmail.com con el siguiente formato</p>   
+        <p>Para solicitar canchas deben mandar correo a smartcanchas@gmail.com con el siguiente formato:</p>   
         <a href="Planilla/Correo.html">Visualizacion de formato del correo para agendar</a>
-        <p>A continuación se muestra una imagen de ejemplo de correo</p> 
+        <p>A continuación se muestra una imagen de ejemplo de correo.</p> 
         <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20del%20Correo%20para%20agendar.png?raw=true" alt="Ejemplo del correo para agendar" class="img-responsive">
         <p>Una vez enviado el correo usted recibira un correo con los detalles de la solicitud, o en caso de un error un mensaje de la causa del error. </p>
         <p>Ejemplo de agendamiento exitoso: </p> 
         <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Exito.png?raw=true" alt="Correo para agendar exitoso" class="img-responsive">
-        <p>Ejemplo de solicitud para agendar fallido: En este caso debido a que alguien más ya a arrendado la cancha para el horario seleccionado</p> 
+        <p>Ejemplo de solicitud para agendar fallido: En este caso debido a que alguien más ya a arrendado la cancha para el horario seleccionado:</p> 
         <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Horario%20no%20disponible.png?raw=true" alt="Correo para agendar fallido por imposibilidad de horario" class="img-responsive">
-        <p>Ejemplo de solicitud para agendar fallido: En este caso debido a que el alumno solicito arriendo con formato incorrecto</p> 
+        <p>Ejemplo de solicitud para agendar fallido: En este caso debido a que el alumno solicito arriendo con formato incorrecto:</p> 
         <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Formato%20Erroneo.png?raw=true" alt="Correo para agendar fallido por formato" class="img-responsive">
-        <p>Ejemplo de solicitud para agendar fallido: En este caso debido a que el alumno ya solicito una cancha durante la semana</p> 
+        <p>Ejemplo de solicitud para agendar fallido: En este caso debido a que el alumno ya solicito una cancha durante la semana:</p> 
         <img src="https://github.com/smartcanchas/smartcanchas.github.io/blob/main/Imagenes/Ejemplo%20-%20Envio%20Correo%20de%20Error%20-%20Solicitar%20mas%20de%20una%20cancha.png?raw=true" alt="Correo para agendar fallido por solicitar nuevamente cancha" class="img-responsive">
-        <br />
+        <br/>
       </section>
     </article>
     
